syntax = "proto3";
option csharp_namespace = "XtraUpload.Protos";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// A file item
message gFileItem {
    string Id = 1;
    string TusId = 2;
    string UserId = 3;
    uint32 Size = 4;
    string Name = 5;
    string MimeType = 6;
    string Extension = 7;
    google.protobuf.StringValue FolderId = 8;
    google.protobuf.Timestamp CreatedAt = 9;
    google.protobuf.Timestamp LastModified = 10;
    ItemStatus Status = 11;
    string StorageServerId = 12;
    gStorageServer StorageServer = 13;
}

message gStorageServer {
    string Id = 1;
    string Address = 2;
}

enum ItemStatus {
    Item_Status_Visible = 0;
    Item_Status_Hidden = 1;
    Item_Status_To_Be_Processed = 2;
    Item_Status_To_Be_Deleted = 3;
}